--- a/CallejonDelArtesano/app/src/main/res/layout/activity_pantalla_articulos_destacados.xml
+++ b/CallejonDelArtesano/app/src/main/res/layout/activity_pantalla_articulos_destacados.xml
@@ -43,14 +43,14 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintVertical_bias="0.013"
-                        app:srcCompat="@drawable/img1" />
+                        app:srcCompat="@drawable/img2" />
 
                     <TextView
                         android:id="@+id/textView2"
-                        android:layout_width="169dp"
+                        android:layout_width="350dp"
                         android:layout_height="44dp"
                         android:layout_marginTop="4dp"
-                        android:text="Gato Small"
+                        android:text="Cuadro de gato"
                         android:textSize="30dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -63,7 +63,7 @@
                         android:id="@+id/textView3"
                         android:layout_width="104dp"
                         android:layout_height="38dp"
-                        android:text="De $4,000"
+                        android:text="$ 1500"
                         android:textSize="20dp"
                         app:layout_constraintBottom_toTopOf="@+id/button"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -87,7 +87,7 @@
                         app:layout_constraintVertical_bias="0.0" />
 
                     <Button
-                        android:id="@+id/button"
+                        android:id="@+id/buttonVer1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="8dp"
@@ -97,16 +97,7 @@
                         app:layout_constraintHorizontal_bias="0.102"
                         app:layout_constraintStart_toStartOf="parent" />
 
-                    <Button
-                        android:id="@+id/button2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="8dp"
-                        android:text="Agregar al Carrito"
-                        app:layout_constraintBottom_toTopOf="@+id/Imagen2"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.638"
-                        app:layout_constraintStart_toStartOf="parent" />
+
 
                     <ImageView
                         android:id="@+id/Imagen2"
@@ -118,14 +109,14 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintVertical_bias="0.689"
-                        app:srcCompat="@drawable/img2" />
+                        app:srcCompat="@drawable/img4" />
 
                     <TextView
                         android:id="@+id/text"
-                        android:layout_width="169dp"
+                        android:layout_width="350dp"
                         android:layout_height="44dp"
                         android:layout_marginTop="8dp"
-                        android:text="SkullColors"
+                        android:text="Cuadro del amor colorido"
                         android:textSize="30dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -139,7 +130,7 @@
                         android:layout_width="104dp"
                         android:layout_height="38dp"
                         android:layout_marginTop="8dp"
-                        android:text="De $780"
+                        android:text="$ 1600"
                         android:textSize="20dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.104"
@@ -160,7 +151,7 @@
                         app:layout_constraintTop_toBottomOf="@+id/text" />
 
                     <Button
-                        android:id="@+id/button3"
+                        android:id="@+id/buttonVer2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
@@ -172,17 +163,7 @@
                         app:layout_constraintTop_toBottomOf="@+id/texto"
                         app:layout_constraintVertical_bias="0.0" />
 
-                    <Button
-                        android:id="@+id/button4"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
-                        android:layout_marginEnd="76dp"
-                        android:text="Agregar al Carrito"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/texto2"
-                        app:layout_constraintVertical_bias="0.0" />
+
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </ScrollView>
