--- a/CallejonDelArtesano/app/src/main/res/layout/activity_informacion_producto.xml
+++ b/CallejonDelArtesano/app/src/main/res/layout/activity_informacion_producto.xml
@@ -33,16 +33,31 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
+
+                    <TextView
+                        android:id="@+id/textTitle"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="Título"
+                        android:textStyle="bold"
+                        android:textSize="30dp"
+                        android:layout_marginHorizontal="16dp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent">
+                    </TextView>
+
                     <ImageView
                         android:id="@+id/imageView"
                         android:layout_width="match_parent"
                         android:layout_height="250dp"
                         android:layout_marginStart="13dp"
                         android:layout_marginEnd="13dp"
-                        android:src="@drawable/arte"
+
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toBottomOf="@+id/textTitle" />
+
 
                     <TextView
                         android:id="@+id/textView1"
@@ -105,11 +120,13 @@
                         app:layout_constraintVertical_bias="0.219" />
 
                     <TextView
+                        android:id="@+id/textdetalle"
                         android:layout_width="313dp"
                         android:layout_height="wrap_content"
                         android:background="#3A3A3A"
                         android:text="@string/Especificaciones_text"
                         android:textSize="16dp"
+                        android:padding="10dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
