--- a/CallejonDelArtesano/app/src/main/res/layout/activity_iniciar_sesion.xml
+++ b/CallejonDelArtesano/app/src/main/res/layout/activity_iniciar_sesion.xml
@@ -7,7 +7,7 @@
     tools:context=".IniciarSesion">
 
     <EditText
-        android:id="@+id/phone_text"
+        android:id="@+id/edit_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="92dp"
@@ -15,7 +15,7 @@
         android:layout_marginEnd="20dp"
         android:ems="10"
         android:hint="@string/email"
-        android:inputType="textMultiLine"
+        android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,11 +33,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.51"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
+        app:layout_constraintTop_toBottomOf="@+id/edit_password"
         app:layout_constraintVertical_bias="0.115" />
 
     <EditText
-        android:id="@+id/editTextTextPassword2"
+        android:id="@+id/edit_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
@@ -49,6 +49,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/phone_text" />
+        app:layout_constraintTop_toBottomOf="@+id/edit_email" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
