--- a/CallejonDelArtesano/app/src/main/res/layout/activity_pantalla_confirmar_venta.xml
+++ b/CallejonDelArtesano/app/src/main/res/layout/activity_pantalla_confirmar_venta.xml
@@ -15,13 +15,13 @@
 
             <ImageView
 
-                android:id="@+id/imageView3"
+                android:id="@+id/imagePrincipal"
                 android:layout_width="338dp"
                 android:layout_height="320dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/arte" />
+                app:srcCompat="@drawable/img1" />
 
             <TextView
                 android:id="@+id/textView2"
@@ -33,10 +33,10 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.105"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+                app:layout_constraintTop_toBottomOf="@+id/imagePrincipal" />
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/textPrecio"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
@@ -45,24 +45,25 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.056"
                 app:layout_constraintStart_toEndOf="@+id/textView2"
-                app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+                app:layout_constraintTop_toBottomOf="@+id/imagePrincipal" />
 
             <TextView
-                android:id="@+id/textView6"
+                android:id="@+id/textDetalles"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="24dp"
                 android:layout_marginEnd="20dp"
                 android:background="#454545"
-                android:text="@string/Especificaciones_text"
+
+                android:padding="10dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView3" />
+                app:layout_constraintTop_toBottomOf="@+id/textPrecio" />
 
             <TextView
-                android:id="@+id/textView7"
+                android:id="@+id/textMetodoPago"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
@@ -71,7 +72,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.083"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView6" />
+                app:layout_constraintTop_toBottomOf="@+id/textDetalles" />
 
             <Button
                 android:id="@+id/button3"
@@ -82,7 +83,7 @@
                 android:textSize="18dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView7" />
+                app:layout_constraintTop_toBottomOf="@+id/textMetodoPago" />
 
             <Button
                 android:id="@+id/button4"
@@ -95,7 +96,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.981"
                 app:layout_constraintStart_toEndOf="@+id/button3"
-                app:layout_constraintTop_toBottomOf="@+id/textView7" />
+                app:layout_constraintTop_toBottomOf="@+id/textMetodoPago" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
