--- a/CallejonDelArtesano/app/src/main/res/layout/activity_pantalla_tajetas.xml
+++ b/CallejonDelArtesano/app/src/main/res/layout/activity_pantalla_tajetas.xml
@@ -73,7 +73,7 @@
         android:id="@+id/textView3"
         android:layout_width="106dp"
         android:layout_height="29dp"
-        android:text="añadir tarjeta"
+        android:text=""
         android:textAlignment="center"
         android:textColor="@color/purple_500"
         android:textStyle="italic"
